Update faker to 9.1.0

--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.1.0",
     "chalk": "^4.0.0",
-    "faker": "5.5.3",
     "glob": "7.1.6",
     "ora": "4.0.3",
     "reflect-metadata": "0.1.13",
